manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notus-svelte-service
spec:
  selector:
    app: notus-svelte
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5173
  type: ClusterIP
